--- a/PalPharmacyApp/src/main/AndroidManifest.xml
+++ b/PalPharmacyApp/src/main/AndroidManifest.xml
@@ -3,28 +3,24 @@
     package="com.app.palpharmacy">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.app.palpharmacy.activities.MainActivity"
-        android:theme="@style/AppTheme.NoActionBar">
-
+        <activity
+            android:name=".activities.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name="com.app.palpharmacy.activities.PharmacyDetailsActivity">
-
-        </activity>
+        <activity android:name=".activities.PharmacyDetailsActivity" />
     </application>
 
 </manifest>
