--- a/PalPharmacyApp/src/main/AndroidManifest.xml
+++ b/PalPharmacyApp/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/map_key"></meta-data>
+            android:value="@string/map_key" />
+
+
 
         <activity android:name=".activities.map" />
         <activity
